# satproc

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml  main.yml
docs/: Makefile  conf.py  getting-started.md  index.md  index.rst  installation.md  requirements.txt  tutorials.md
examples/: extract-chips.ipynb  masks.ipynb  post-processing.ipynb
satproc/: __init__.py  chips.py  filter.py  histogram.py  masks.py  scale.py  utils.py
satproc/console/: extract_chips.py  filter.py  make_masks.py  match_histograms.py  polygonize.py  scale.py  smooth_stitch.py  spatial_filter.py
satproc/postprocess/: generalize.py  polygonize.py  smooth.py  spatial_filter.py
src/satproc/: build_dataset.py  chips.py  filter.py  histogram.py  masks.py  scale.py  skeleton.py  utils.py
src/satproc/console/: build_dataset.py  extract_chips.py  generalize.py  make_masks.py  match_histograms.py  multiband_chip_mask.py  polygonize.py  scale.py  skeleton.py  smooth_stitch.py
src/satproc/postprocess/: generalize.py  polygonize.py  smooth.py
tests/: conftest.py  test_extract_chips.py  test_filter.py  test_generalize.py  test_make_masks.py  test_match_histograms.py  test_polygonize.py  test_scale.py  test_skeleton.py  test_smooth_stitch.py
tests/data/: lux1.tif  lux1_aoi.geojson  lux1_gt.geojson
tests/test_filter/chips/: lux1_0_3.tif  lux1_1_0.tif  lux1_1_3.tif
tests/test_generalize/: output.gpkg
tests/test_match_histograms/: input.tif  ref.tif
tests/test_polygonize/chips/: lux1_0_0.tif  lux1_0_1.tif  lux1_0_2.tif  lux1_1_1.tif  lux1_1_2.tif
tests/test_smooth_stitch/distance/: lux1_0_1.tif  lux1_0_2.tif  lux1_0_3.tif  lux1_0_5.tif  lux1_0_6.tif  lux1_1_0.tif  lux1_1_1.tif  lux1_1_10.tif  lux1_1_11.tif  lux1_1_12.tif  lux1_1_2.tif  lux1_1_3.tif  lux1_1_4.tif  lux1_1_5.tif  lux1_1_6.tif  lux1_1_9.tif  lux1_2_0.tif  lux1_2_1.tif  lux1_2_10.tif  lux1_2_11.tif  lux1_2_12.tif  lux1_2_2.tif  lux1_2_3.tif  lux1_2_4.tif  lux1_2_5.tif  lux1_2_6.tif  lux1_2_9.tif  lux1_3_1.tif  lux1_3_10.tif  lux1_3_11.tif  lux1_3_2.tif  lux1_3_3.tif  lux1_3_5.tif  lux1_3_6.tif  lux1_3_9.tif  orig.vrt
