[tool.poetry]
name = "pysatproc"
version = "1.0.0"
description = "Python library and CLI tools for processing geospatial imagery for ML"
authors = ["Damián Silvani <munshkr@gmail.com>"]
license = "Apache-2.0"
packages = [
    {include = "satproc"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Fiona = "^1.8.21"
numpy = "^1.22.2"
opencv-python = "^4.5.5"
pyproj = "^3.3.0"
rasterio = "^1.2.10"
Rtree = "^0.9.7"
scikit-image = "^0.19.2"
scipy = "^1.8.0"
Shapely = "^1.8.1"
tqdm = "^4.62.3"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
Sphinx = "^4.4.0"
black = {version = "^22.1.0", allow-prereleases = true}

[tool.poetry.scripts]
satproc_extract_chips = "satproc.console.extract_chips:run"
satproc_make_masks = "satproc.console.make_masks:run"
satproc_scale = "satproc.console.scale:run"
satproc_match_histograms = "satproc.console.match_histograms:run"
satproc_smooth_stitch = "satproc.console.smooth_stitch:run"
satproc_polygonize = "satproc.console.polygonize:run"
satproc_generalize = "satproc.console.generalize:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
