[tool.poetry]
name = "pysatproc"
version = "0.2.1"
description = "Python library and CLI tools for processing geospatial imagery for ML"
authors = ["Damián Silvani <munshkr@gmail.com>"]
license = "Apache-2.0"
packages = [
    {include = "satproc"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Fiona = "^1.8.21"
numpy = "^1.22.2"
opencv-python = "^4.5.5"
pyproj = "^3.3.0"
rasterio = "^1.3.6"
Rtree = "^0.9.7"
scikit-image = "^0.19.2"
scipy = "^1.8.0"
Shapely = "^1.8.1"
tqdm = "^4.62.3"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
Sphinx = "^4.4.0"
black = {version = "^22.1.0", allow-prereleases = true}
pytest-datadir = "^1.3.1"
sphinx-rtd-theme = "^1.0.0"
recommonmark = "^0.7.1"
nbsphinx = "^0.8.8"
ipython = "^8.1.1"

[tool.poetry.scripts]
satproc_extract_chips = "satproc.console.extract_chips:run"
satproc_make_masks = "satproc.console.make_masks:run"
satproc_scale = "satproc.console.scale:run"
satproc_match_histograms = "satproc.console.match_histograms:run"
satproc_smooth_stitch = "satproc.console.smooth_stitch:run"
satproc_polygonize = "satproc.console.polygonize:run"
satproc_generalize = "satproc.console.generalize:run"
satproc_filter = "satproc.console.filter:run"
satproc_spatial_filter = "satproc.console.spatial_filter:run"

[tool.pytest.ini_options]
addopts = "--exitfirst --failed-first --cov=satproc --cov-report html --cov-report xml --cov-report term"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
